tests/neg/inline-trait-signature-generic-context-bound.scala
inline trait A[T: List] // error

given List[Int] = Nil
class B extends A